[kbss-cvut/termit-ui#271] Add readonly endpoints for getting Term snapshots.